# BlitzNext

./: .gitignore  BlitzNext.sln  BlitzNext_vs2015.sln  CMakeLists.txt  README.MD  UpgradeLog.htm
BlitzBasicIDE/: about.cpp  blitzide.rc  blitzide.vcxproj  editor.cpp  htmlhelp.cpp  mainframe.cpp  mainframe.h  prefs.cpp
BlitzBasicLauncher/: bblaunch.cpp  bblaunch.vcxproj  checkdx.cpp
Engine/: Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  GraphicsDriver.cpp  GraphicsDriver.h  Public.h  Renderer.h
Linker/: CMakeLists.txt  linker_dll.cpp  linker_dll.vcxproj
Linker/Debug/: linker.exp
Linker/lib/: CMakeLists.txt  dlltoexe.cpp  dlltoexe.hpp  image_util.cpp  image_util.hpp  linker.cpp  linker.hpp  std.hpp
LinkerLib/: image_util.cpp  linker.cpp  linker.vcxproj
Runtime/: CMakeLists.txt  bbruntime_dll.cpp  bbruntime_dll.hpp  bbruntime_dll.rc  bbruntime_dll.vcxproj  bbruntime_dll.vcxproj.filters  resource.hpp
Runtime/Debug/: runtime.exp
Runtime/Release/: runtime.exp
Runtime/blitz3d/: CMakeLists.txt  animation.cpp  animation.hpp  animator.cpp  animator.hpp  bd2model.cpp  bd2model.hpp  boxvis.cpp  brush.cpp  brush.hpp  cachedtexture.cpp  cachedtexture.hpp  camera.cpp  camera.hpp  collision.cpp  collision.hpp  emitter.cpp  emitter.hpp  entity.cpp  entity.hpp  frustum.cpp  frustum.hpp  geom.cpp  geom.hpp  group.hpp  light.cpp  light.hpp  listener.cpp  listener.hpp  loader.cpp  loader_3ds.cpp  loader_3ds.hpp  loader_b3d.cpp  loader_b3d.hpp  loader_x.cpp  loader_x.hpp  md2model.cpp  md2model.hpp  md2model_bak.cpp  md2norms.cpp  (+43 more)
Runtime/gfx/: CMakeLists.txt  asmcoder.cpp  asmcoder.hpp  ddutil.cpp  ddutil.hpp  graphicsruntime.hpp  gxaudio.cpp  gxaudio.hpp  gxcanvas.cpp  gxcanvas.hpp  gxchannel.cpp  gxchannel.hpp  gxdevice.cpp  gxdevice.hpp  gxdir.cpp  gxdir.hpp  gxfilesystem.cpp  gxfilesystem.hpp  gxfont.cpp  gxfont.hpp  gxgraphics.cpp  gxgraphics.hpp  gxinput.cpp  gxinput.hpp  gxlight.cpp  gxlight.hpp  gxmesh.cpp  gxmesh.hpp  gxmovie.cpp  gxmovie.hpp  gxmusic.cpp  gxmusic.hpp  gxruntime.cpp  gxruntime.hpp  gxscene.cpp  gxscene.hpp  gxsound.cpp  gxsound.hpp  gxtimer.cpp  gxtimer.hpp  (+1 more)
Runtime/lib/: CMakeLists.txt  basic.cpp  basic.hpp  bb_basic.hpp  bbaudio.cpp  bbaudio.hpp  bbbank.cpp  bbbank.hpp  bbblitz3d.cpp  bbblitz3d.hpp  bbfilesystem.cpp  bbfilesystem.hpp  bbgraphics.cpp  bbgraphics.hpp  bbinput.cpp  bbinput.hpp  bbmath.cpp  bbmath.hpp  bbruntime.cpp  bbruntime.hpp  bbsockets.cpp  bbsockets.hpp  bbstream.cpp  bbstream.hpp  bbstring.cpp  bbstring.hpp  bbsys.cpp  bbsys.hpp  multiplay.cpp  multiplay.hpp  multiplay_setup.cpp  multiplay_setup.rc  resource.hpp  std.hpp  userlib.cpp  userlib.hpp  userlibs.cpp  userlibs.hpp
RuntimeLib/: basic.cpp  basic.h  bbaudio.cpp  bbbank.cpp  bbblitz3d.cpp  bbfilesystem.cpp  bbgraphics.cpp  bbinput.cpp  bbmath.cpp  bbruntime.cpp  bbruntime.vcxproj  bbruntime.vcxproj.filters  bbsockets.cpp  bbstream.cpp  bbstring.cpp  bbsys.h  multiplay.cpp  multiplay_setup.cpp  multiplay_setup.h  userlibs.cpp
asm_makeinsts/: asm_makeinsts.vcxproj  main.cpp
bblaunch/: bblaunch.vcxproj
bbruntime/: bbblitz3d.cpp  bbruntime.vcxproj  bbsockets.cpp  multiplay.h
bbruntime_dll/: bbruntime_dll.vcxproj  bbruntime_dll.vcxproj.filters
blitz/: blitz.vcxproj  libs.cpp  libs.h  main.cpp
blitz3d/: animation.cpp  animator.cpp  blitz3d.vcxproj  blitz3d.vcxproj.filters  cachedtexture.cpp  cachedtexture.h  collision.cpp  collision.h  entity.cpp  entity.h  geom.h  listener.cpp  listener.h  loader_3ds.cpp  loader_b3d.cpp  loader_x.cpp  md2model.cpp  md2model.h  md2rep.cpp  meshcollider.cpp  meshloader.cpp  meshmodel.cpp  meshmodel.h  meshutil.cpp  mirror.h  object.cpp  object.h  pivot.h  planemodel.cpp  planemodel.h  q3bspmodel.cpp  q3bspmodel.h  q3bsprep.cpp  sprite.h  surface.cpp  terrain.cpp  terrainrep.cpp  texture.cpp  texture.h  world.cpp  (+1 more)
blitzide/: blitzide.vcxproj  blitzide.vcxproj.filters
compiler/: CMakeLists.txt  assem.h  assem.hpp  codegen.hpp  compiler.vcxproj  compiler.vcxproj.filters  decl.cpp  decl.hpp  declnode.cpp  declnode.hpp  environ.cpp  environ.hpp  ex.hpp  exprnode.cpp  exprnode.h  exprnode.hpp  label.hpp  libs.cpp  libs.hpp  main.cpp  node.cpp  node.hpp  nodes.hpp  parser.cpp  parser.hpp  prognode.cpp  prognode.hpp  std.hpp  stmtnode.cpp  stmtnode.hpp  toker.cpp  toker.hpp  type.cpp  type.hpp  var.hpp  varnode.cpp  varnode.hpp
compiler/assem_x86/: asm_insts.cpp  assem_x86.cpp  operand.cpp
compiler/codegen_x86/: codegen_x86.cpp  tile.cpp
compiler/lib/: CMakeLists.txt  assem.hpp  codegen.hpp  decl.cpp  decl.hpp  declnode.cpp  declnode.hpp  environ.cpp  environ.hpp  ex.hpp  exprnode.cpp  exprnode.hpp  label.hpp  node.cpp  node.hpp  nodes.hpp  parser.cpp  parser.hpp  prognode.cpp  prognode.hpp  stmtnode.cpp  stmtnode.hpp  toker.cpp  toker.hpp  type.cpp  type.hpp  var.hpp  varnode.cpp  varnode.hpp
compiler/lib/assem_x86/: assem_x86.cpp  assem_x86.hpp  insts.cpp  insts.hpp  operand.cpp  operand.hpp
compiler/lib/codegen_x86/: codegen_x86.cpp  codegen_x86.hpp  tile.cpp  tile.hpp
config/: CMakeLists.txt  Source.cpp  config.hpp  config.vcxproj
debugger/: CMakeLists.txt  debugger.hpp  debugger.rc  debugger.vcxproj  debugger.vcxproj.filters  debuggerapp.cpp  debuggerapp.hpp  debugtree.cpp  debugtree.h  debugtree.hpp  mainframe.cpp  mainframe.hpp  prefs.cpp  prefs.hpp  resource.hpp  sourcefile.cpp  sourcefile.hpp  stdafx.hpp  stdutil.cpp  tabber.cpp  tabber.hpp
gxruntime/: CMakeLists.txt  GraphicsRuntime.h  asmcoder.cpp  ddutil.cpp  ddutil.h  ddutil.hpp  graphicsruntime.hpp  gxaudio.cpp  gxaudio.hpp  gxcanvas.cpp  gxcanvas.h  gxcanvas.hpp  gxchannel.cpp  gxdevice.cpp  gxdir.cpp  gxfilesystem.cpp  gxfilesystem.hpp  gxfont.cpp  gxfont.h  gxgraphics.cpp  gxgraphics.h  gxgraphics.hpp  gxinput.cpp  gxinput.h  gxinput.hpp  gxlight.cpp  gxlight.h  gxlight.hpp  gxmesh.cpp  gxmesh.h  gxmesh.hpp  gxmovie.cpp  gxmovie.hpp  gxmusic.cpp  gxruntime.cpp  gxruntime.h  gxruntime.hpp  gxruntime.vcxproj  gxruntime.vcxproj.filters  gxscene.cpp  (+8 more)
ide/: about.cpp  (+9 more)
stdutil/: CMakeLists.txt  stdutil.cpp  stdutil.h  stdutil.hpp  stdutil.vcxproj
(+20 files in other folders)
